@@ -411,3 +411,5 @@ Code:
   from my Star Atlas into starnames.dat (whoose format has been completely
   revamped). (dramsey)
 * Unix GTK: Got Ctrl-Q to exit the Program properly. (dramsey)
+* Unix GTK: Capture Filenames now starts up with a proper filename, remembers
+            the last directory, and complains about bad filenames. (dramsey)
